Remove overflow, causing issues

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,6 @@ iframe {
 
 #main #content {
   flex-grow: 1;
-  overflow: auto;
   color: var(--secondary-color);
 }
 
